* Process undefined mode as select. * Fix model retrieval api for Kotlin. Relates to #31